@@ -1,3 +1,14 @@
+2011-11-18  Daniel Bates  <dbates@rim.com>
+
+        Add CMake build infrastructure for the BlackBerry port
+        https://bugs.webkit.org/show_bug.cgi?id=72768
+
+        Reviewed by Antonio Gomes.
+
+        * PlatformBlackBerry.cmake: Added.
+        * shell/PlatformBlackBerry.cmake: Added.
+        * wtf/PlatformBlackBerry.cmake: Added.
+
 2011-11-18  Filip Pizlo  <fpizlo@apple.com>
 
         DFG JIT fails speculation on InstanceOf if the base is not an object
